--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "next": "15.0.3",
         "react": "19.0.0-rc-66855b96-20241106",
         "react-dom": "19.0.0-rc-66855b96-20241106",
+        "recharts": "^2.13.3",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7"
     },
@@ -30,5 +31,6 @@
     },
     "overrides": {
         "react-is": "^19.0.0-rc-69d4b800-20241021"
-    }
+    },
+    "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
