--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
-        "typescript": "^5",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/recharts": "^1.8.29",
+        "eslint": "^8",
+        "eslint-config-next": "15.0.3",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
-        "eslint": "^8",
-        "eslint-config-next": "15.0.3"
+        "typescript": "^5"
     },
     "overrides": {
         "react-is": "^19.0.0-rc-69d4b800-20241021"
