--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.60.6",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.460.0",
@@ -20,6 +21,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@tanstack/eslint-plugin-query": "^5.60.1",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
