--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-select": "^2.1.2",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-tabs": "^1.1.1",
         "@tanstack/react-query": "^5.60.6",
+        "@tanstack/react-table": "^8.20.5",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.460.0",
         "next": "15.0.3",
+        "next-themes": "^0.4.3",
         "react": "19.0.0-rc-66855b96-20241106",
         "react-dom": "19.0.0-rc-66855b96-20241106",
         "recharts": "^2.13.3",
